CLASSES-3926 accessibility changes: more aria-labels and try to avoid zoom on mobile

--- a/seat-assignments/seats-tool/src/webapp/css/base.css
+++ b/seat-assignments/seats-tool/src/webapp/css/base.css
@@ -134,8 +134,12 @@
     text-align: center;
     min-width: 120px;
 }
-.seats-body .seats-student .seat-assignment-widget input[readonly] {
+
+.seats-body .seats-student .seat-assignment-widget input {
     font-size: 22px;
+}
+
+.seats-body .seats-student .seat-assignment-widget input[readonly] {
     vertical-align: middle;
     max-width: 400px;
 }
